style(all page) add reponsive all page, fix line above title all page, add Roboto-Black font again, write js
add reponsive all page
fix line above title all page
add Roboto-Black font again
write js to scroll page, change size when screen change size
add Roboto-Black font again

Close

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -69,4 +69,5 @@ $color-line-grey: rgb(229, 229, 229);
 $color-background-facebook: rgb(76, 110, 169);
 $color-background-google: rgb(255, 88, 56);
 $color-background-youtube: rgb(220, 56, 51);
+$grey-line-feedback: rgba(84, 84, 84, 0.8);
 
