--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,7 +22,7 @@
 
 
 // Page specific styles
-@import "page/banner";
+@import "page/home";
 @import "page/about";
 @import "page/introduce";
 @import "page/book";
