--- a/assets/scss/page/_home.scss
+++ b/assets/scss/page/_home.scss
@@ -110,5 +110,8 @@
     @media #{$info-phone}{
       transform: translate(135px, -76px);
     }
+    .play__01 {
+      display: none;
+    }
   }
 }
