--- a/assets/scss/page/_navOfOnline.scss
+++ b/assets/scss/page/_navOfOnline.scss
@@ -2,15 +2,27 @@
   background-color: $grey-dark;
   width: 100%;
   height: 200px;
+  @media #{$info-phone} {
+    height: 310px;
+  }
   .container {
     &.nav__online__grid {
       display: grid;
       grid-template-columns: 285px 300px 285px 300px;
       text-align: center;
+      @media #{$info-phone} {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 150px 150px;
+        row-gap: 10px;;
+      }
       a {
         padding-top: 60px;
         padding-bottom: 60px;
         position: relative;
+        @media #{$info-phone} {
+          padding-top: 20px;
+          padding-bottom: 50px;
+        }
         img {
           margin-bottom: 11px;
         }
