--- a/assets/scss/base/_font-awesome.scss
+++ b/assets/scss/base/_font-awesome.scss
@@ -136,6 +136,17 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url(./Roboto-Black.eot);
+  src: url(./Roboto-Black.eot?#iefix) format('embedded-opentype'),
+       url(./Roboto-Black.otf) format('otf'),
+       url(./Roboto-Black.svg#Roboto-Black) format('svg'),
+       url(./Roboto-Black.ttf) format('truetype'),
+       url(./Roboto-Black.woff) format('woff'),
+       url(./Roboto-Black.woff2) format('woff2');
+}
+
 // Roboto Italic
 @font-face {
   font-family: 'Roboto';
