--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -65,17 +65,13 @@ html {
     margin-bottom: 60px;
     font-weight: 400;
     font-size: 48px;
-    @media #{$info-phone}{
-      font-size: 36px;
+    @media #{$info-tablet-vertical}{
+     font-size: 36px;
     }
     &::after {
       @include line-simple-color(170px, 4px, $orange-dark);
       top: 86px;
       left: 0;
-    }
-    &::before {
-      @include line-simple-color(100%, 4px, $color-line-grey);
-      top: 86px;
     }
   } 
 }
@@ -117,9 +113,6 @@ html {
     color: $orange-dark;
     font-size: 14px;
     transform: translateY(-2px);
-  }
-  .play {
-    display: none;
   }
 }
 
