--- a/assets/scss/page/_about.scss
+++ b/assets/scss/page/_about.scss
@@ -1,8 +1,20 @@
 .about {
   display: grid;
   column-gap: 100px;
+  position: relative;
   .about__content {
     padding: 90px 0 100px 15px;
+    @media #{$info-phone}{
+      padding-right: 15px;
+    }
+    &::before {
+      @include line-simple-color(calc(570px + (100% - 1170px)/2), 4px, $color-line-grey);
+      left: 0;
+      top: 176px;
+      @media #{$info-phone}{
+        @include line-simple-color(100%, 4px, $color-line-grey);
+      }
+    }
     &.title {
       h2::after {
         left: 15px;
@@ -10,7 +22,7 @@
 
     }
     .content {
-      width: 520px;
+      max-width: 520px;
       margin-bottom: 32px;
     }
     .btn__see__more {
@@ -22,5 +34,8 @@
       max-width: 1170px;
       height: 620px;
       background-size: cover;
+      @media #{$info-phone} {
+        display: none;
+      }
   }
 }
