--- a/assets/scss/page/_book.scss
+++ b/assets/scss/page/_book.scss
@@ -2,20 +2,25 @@
     &.container {
         padding-top: 90px;
         padding-bottom: 160px;
-        .title {
-            margin-bottom: 56px;
-            h2::before {
-                @include line-simple-color(100%, 4px, $color-line-grey);
-            }
-            h2::after {
-                @include line-simple-color(170px, 4px, $orange-dark);
+        &::before {
+            @include line-simple-color(100%, 4px, $color-line-grey);
+            left: 15px;
+            top: 176px;
+            @media #{$info-phone}{
                 left: 0;
             }
+          }
+        .title {
+            margin-bottom: 56px;
         }
         .grid {
             display: grid;
-            column-gap: 30px;
+            gap: 30px;
             grid-template-columns: 1fr 1fr 1fr 1fr;
+            @media #{$info-phone} {
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+            }
             .book__card {
                 background-color: $color-default-lightest;
                 position: relative;
