--- a/assets/scss/page/_online.scss
+++ b/assets/scss/page/_online.scss
@@ -2,24 +2,28 @@
   padding-top: 60px;
   padding-bottom: 110px;
   background-color: $color-background-calendar;
-  .container {
+  .container {   
+    &::before {
+      @include line-simple-color(100%, 4px, $color-line-grey);
+      left: 0;
+      top: 86px;
+    }
     .online__title {
       display: flex;
       justify-content: space-between;
       margin-bottom: 56px;
-      .title {
-        h2::before {
-          @include line-simple-color(calc(100% - 30px), 4px, $color-line-grey);
-        }
-        h2::after {
-          @include line-simple-color(170px, 4px, $orange-dark);
-          left: 15px;
-        }
+      @media #{$info-phone} {
+        display: block;
       }
       .suggest__course {
         display: flex;
         order: 5;
         padding-top: 22px;
+        @media #{$info-phone} {
+          padding-top: 30px;
+          display: flex;
+          justify-content: space-between;
+        }
         a {
           height: 12px;
           display: flex;
@@ -29,6 +33,9 @@
           font-weight: 600;
           padding: 15px 13px;
           line-height: 12px;
+          @media #{$info-phone} {
+            padding: 12px 5px;
+          }
           svg {
             height: 12px;
             margin-right: 3px;
@@ -50,6 +57,10 @@
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: 345px 345px;
       margin-bottom: 30px;
+      @media #{$info-phone} {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 345px 345px 345px 345px;
+      }
       .course__card {
         background-color: $color-default-lightest;
         position: relative;
